--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MyLogin</string>
+    <string name="title_activity_login_facebook">LoginFacebookActivity</string>
+    <string name="forgotPassword"><u><b>Forgot Password?</b></u></string>
+    <string name="signUpFacebook"><u><b>SignUp for Facebook</b></u></string>
 </resources>
